tests/fixtures/errors/unreachable_section.norm
:root
:data
k
v

:orphan
k
w
